{{$NEXT}}

1.68    2014-05-13

- The last release was missing some test changes I made on another
  machine. Doh.


1.67    2014-05-13

- I accidentally skipped 1.66, don't read anything into the 0.02 version bump
  here.

- This release is based on version 2014c of the IANA database (I skipped 2014b
  for lack of debuggint time). This release includes contemporary changes for
  Crimea and Troll Station, Antarctica from 2014b and contemporary changes for
  Egypt from 2014c.


1.65    2014-03-09

- This release is based on version 2014a of the Olson database. This release
  includes contemporary changes for Turkey.


1.64    2014-02-07

- Under taint mode, DateTime::TimeZone->new( name => 'local' ) could die
  depending on the method used to find the local time zone name. The resulting
  variable would often be tainted. We now untaint all names before attempting
  to load them. Reported by Stevie-O. RT #92631.


1.63    2013-10-28

- This release is based on version 2013h of the Olson database. This release
  includes contemporary changes for Morocco, Librya, and Western Sahara (El
  Aaiun).


1.62    2013-09-25

- This release is based on version 2013f of the Olson database. This release
  includes contemporary changes for Tocantins, Jordan, and Palestine.


1.61    2013-09-20

- This release is based on version 2013e of the Olson database. This release
  includes contemporary changes for Fiji, Indonesia and San Luis,
  Argentina. It also includes a number of historical changes. See
  http://mm.icann.org/pipermail/tz-announce/2013-September/000013.html for
  more details.


1.60    2013-07-07

- This release is based on version 2013d of the Olson database. This release
  includes contemporary changes for Morocco and Israel. It also includes
  historical changes for Jerusalem.


1.59    2013-04-20

- This release is based on version 2013c of the Olson database. This release
  includes contemporary changes for Palestine and Paraguay. It also includes a