@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+- Don't run tests for Unix on non-Unix boxes.
+
+
 1.68    2014-05-13
 
 - The last release was missing some test changes I made on another
